--- a/configure.ac
+++ b/configure.ac
@@ -27,7 +27,7 @@ AC_ENABLE_STATIC
 LT_INIT
 
 # Checks for libraries.
-AC_CHECK_LIB([m], [floor])
+AC_CHECK_LIB([c], [strlen, strncmp, calloc, free])
 
 m4_ifdef([AM_SILENT_RULES], [AM_SILENT_RULES([yes])])
 AC_SYS_LARGEFILE
