--- a/makefile.am
+++ b/makefile.am
@@ -12,8 +12,7 @@ AM_CFLAGS = -Wall \
             -std=gnu99 \
             -O3 \
             -Wstrict-aliasing=2 \
-            -fstrict-aliasing \
-            -pedantic
+            -fstrict-aliasing
 
 lib_LTLIBRARIES = libjson.la
 libjson_la_LDFLAGS = -no-undefined -version-info 0:1:0
